force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field determines if the pledge is active and is automatically set via apex.</description>
    <inlineHelpText>This field determines if the pledge is active and is automatically set via apex.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>