force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Advance_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Advance_Rate__c</fullName>
    <description>This field is manually populated. The percentage of the value of collateral that a lender uses to determine the amount of a loan.</description>
    <formula>IF(
            NOT(ISBLANK(LLC_BI__Advance_Rate_Override__c) || LLC_BI__Advance_Rate_Override__c == 0),
            LLC_BI__Advance_Rate_Override__c,
            IF(
                NOT(ISBLANK(LLC_BI__Auto_Applied_Advance_Rate__c) || LLC_BI__Auto_Applied_Advance_Rate__c == 0),
                LLC_BI__Auto_Applied_Advance_Rate__c,
                LLC_BI__Collateral__r.LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the value of collateral that a lender uses to determine the amount of a loan.</inlineHelpText>
    <label>Advance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>