force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Advance_Rate_Override__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Advance_Rate_Override__c</fullName>
    <description>This is user updated and required if advanced rate is overridden. The overridden advance rate.</description>
    <inlineHelpText>The overridden advance rate.</inlineHelpText>
    <label>Advance Rate Override</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>