force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Authorize__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Authorize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. The user must check this box if they are attempting to pledge more than the current lendable value of a piece of collateral to a loan.</description>
    <inlineHelpText>The user must check this box if they are attempting to pledge more than the current lendable value of a piece of collateral to a loan.</inlineHelpText>
    <label>Authorize Pledge Amount</label>
    <type>Checkbox</type>
</CustomField>