force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Auto_Applied_Advance_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Auto_Applied_Advance_Rate__c</fullName>
    <description>The system automatically populates this percentage field to set the advance rate for this collateral, based on transactional detail.</description>
    <inlineHelpText>Auto-populated value based on the system administrator’s configuration through matrix manager.</inlineHelpText>
    <label>Auto-Applied Advance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>