force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral__c</fullName>
    <description>This reference field is optional and specifies the collateral pledged to the loan. It is manually populated.</description>
    <label>Collateral</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loan_Collateral2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>