force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Value__c</fullName>
    <description>This field is optional and user input. This is a System Generated field from the Value field on the Collateral object. Do not modify.</description>
    <inlineHelpText>This is a System Generated field from the Value field on the Collateral object. Do not modify.</inlineHelpText>
    <label>Collateral Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>