force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Current_Lendable_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current_Lendable_Value__c</fullName>
    <description>This field is optional and user input. Current Lendable Value of the collateral based on the Advance Rate.</description>
    <inlineHelpText>Current Lendable Value of the collateral based on the Advance Rate.</inlineHelpText>
    <label>Current Lendable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>