force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Is_Excluded__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. This field is populated via apex to exclude this pledge from calculations.</description>
    <inlineHelpText>This field is populated via apex to exclude this pledge from calculations.</inlineHelpText>
    <label>Is Excluded</label>
    <type>Checkbox</type>
</CustomField>