force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Is_Leased_Asset__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Leased_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. This field is automatically populated via apex to indicate that this collateral is a leased asset.</description>
    <inlineHelpText>This field is automatically populated via apex to indicate that this collateral is a leased asset.</inlineHelpText>
    <label>Is Leased Asset</label>
    <type>Checkbox</type>
</CustomField>