force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defaults to false. It checks to see if is true on other pledge records for the same piece of collateral. If true on other pledge records, it will not let the user pledge it again as primary because a loan cannot have more than one piece of collateral indicated as primary.</description>
    <inlineHelpText>Is this the primary collateral on the loan.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>