force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lien_Position__c</fullName>
    <description>This field is optional and user input. The lien position that will be taken on Collateral.</description>
    <inlineHelpText>The lien position that will be taken on Collateral.</inlineHelpText>
    <label>Lien Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>