force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required and user updated. The Loan that the collateral is related to.</description>
    <inlineHelpText>The Loan that the collateral is related to.</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipName>Loan_Collateral</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>