force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Original_Lendable_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Original_Lendable_Value__c</fullName>
    <description>This field is optional and user input. The Lendable Value present on the collateral at the time the loan is booked.</description>
    <inlineHelpText>The Lendable Value present on the collateral at the time the loan is booked.</inlineHelpText>
    <label>Original Lendable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>