force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Original_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Original_Loan_Amount__c</fullName>
    <description>The system automatically populates this field with the original amount of the loan associated to this piece of collateral.</description>
    <inlineHelpText>Displays the original amount of the loan associated to this piece of collateral.</inlineHelpText>
    <label>Original Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>