force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Pledged_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pledged_Status__c</fullName>
    <description>This field is manually selected and specifies the pledge status as either Active (currently being used) or Inactive (no longer being used).</description>
    <inlineHelpText>Manually select the collateral pledge status as either Active (currently being used) or Inactive (no longer being used).</inlineHelpText>
    <label>Pledged Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>