force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This field is optional and user input. The date the collateral is pledged against a loan.</description>
    <inlineHelpText>The date the collateral is pledged against a loan.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>