force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Third_Lien_Position_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Third_Lien_Position_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is optional and user input. The value of the third lien position. This field is populated by the system.</description>
    <inlineHelpText>The value of the third lien position. This field is populated by the system.</inlineHelpText>
    <label>Third Lien Position Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>