force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Total_Prior_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Prior_Lien_Amount__c</fullName>
    <description>This field is automatically calculated. The sum of all prior liens.</description>
    <inlineHelpText>The sum of all prior liens.</inlineHelpText>
    <label>Total Prior Lien Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>