force-app/main/default/objects/LLC_BI__Loan_Collateral2__c/fields/LLC_BI__Total_Superior_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Superior_Lien_Amount__c</fullName>
    <description>This is a required field and automatically updated. Formula to calculate the total superior lien amount. The total amount of all liens with a higher position.</description>
    <formula>CASE(LLC_BI__Lien_Position__c, &apos;1st&apos;, 0, &apos;2nd&apos;,  LLC_BI__Total_Prior_Lien_Amount__c -  LLC_BI__Second_Lien_Position_Value__c - LLC_BI__Third_Lien_Position_Value__c - LLC_BI__Other_Lien_Position_Value__c,&apos;3rd&apos;, LLC_BI__Total_Prior_Lien_Amount__c -  LLC_BI__Third_Lien_Position_Value__c - LLC_BI__Other_Lien_Position_Value__c,&apos;Other&apos;,  LLC_BI__Total_Prior_Lien_Amount__c -  LLC_BI__Other_Lien_Position_Value__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Superior Lien Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>